# helloagents

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  RELEASE_NOTES.md  SKILL.md  bootstrap-lite.md  bootstrap.md  cli.mjs  gemini-extension.json  install.ps1  install.sh  package.json  pyproject.toml  stageflowwiki.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
Claude Code/: CLAUDE.md
Codex CLI/: AGENTS.md
Grok CLI/: GROK.md
Qwen CLI/: QWEN.md
docs/: proposal-grill-me-adoption.md
helloagents/: __init__.py  __main__.py  _common.py  bootstrap.md  cli.py  config_helpers.py  installer.py  interactive.py  updater.py  version_check.py  win_helpers.py
hooks/: hooks-claude.json  hooks-gemini.json  hooks.json
scripts/: advisor-state.mjs  capability-registry.mjs  cli-branch.mjs  cli-codex-config.mjs  cli-codex-hooks-state.mjs  cli-codex.mjs  cli-config.mjs  cli-deepseek.mjs  cli-doctor-codex.mjs  cli-doctor-render.mjs  cli-doctor.mjs  cli-host-detect.mjs  cli-hosts.mjs  cli-lifecycle-hosts.mjs  cli-lifecycle.mjs  cli-messages.mjs  cli-process.mjs  cli-runtime-carrier.mjs  cli-runtime-root.mjs  cli-toml.mjs  cli-utils.mjs  closeout-state.mjs  delivery-gate-messages.mjs  delivery-gate.mjs  guard-rules.mjs  guard.mjs  notify-closeout.mjs  notify-context.mjs  notify-events.mjs  notify-payload.mjs  notify-route.mjs  notify-shared.mjs  notify-sound.mjs  notify-source.mjs  notify-ui.mjs  notify.mjs  plan-contract.mjs  project-session-cleanup.mjs  project-storage.mjs  (+21 more)
(+286 files in other folders)
